# scrapeflow

./: .env.example  .gitignore  .pre-commit-config.yaml  ADR-001-worker-job-contract.md  CLAUDE.md  PRODUCTION_REVIEW.md  PROGRESS.md  scrapeflow-session-handoff.md  suggestions.md
api/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
api/app/: constants.py  main.py  models.py  settings.py
api/app/auth/: api_key.py  dependencies.py  jwt.py  user_sync.py
api/app/core/: advisory.py  db.py  diff.py  encryption.py  minio.py  nats.py  rate_limit.py  redis.py  result_consumer.py  scheduler.py  security.py  webhook_loop.py  webhooks.py
api/app/middleware/: correlation.py
api/app/models/: __init__.py  api_key.py  batch.py  crawl.py  job.py  job_runs.py  job_secrets.py  llm_keys.py  user.py  user_quota.py  webhook_delivery.py
api/app/routers/: admin.py  health.py  jobs.py  users.py
api/app/schemas/: admin.py  jobs.py  users.py
api/migrations/: env.py
api/migrations/versions/: 1accea159261_migration_3_1_add_respect_robots_to_jobs.py  34b608ca02ef_drop_run_state_columns_from_jobs.py  4b7de19105ce_add_phase2_fields_to_jobs.py  53a03ff4c7a1_migration_3_3_actions_webhook_url_.py  5ea37260383e_add_is_admin_to_user.py  62f88e93ca14_migration_3_7_crawls_crawl_pages_crawl_.py  655b7e9b461b_add_nats_stream_seq_to_job_runs.py  669e6fbf05b9_create_webhook_deliveries.py  6d05497e7c9a_migration_3_4_job_secrets.py  8a673d38fe23_create_users_api_keys_jobs_tables.py  8d05cd602f03_migration_3_5_batches_batch_items.py  97555982a68c_migration_3_6_job_runs_batch_nullable.py  c26955897e1d_migration_3_8_user_quotas.py  cdf971b6d3aa_migration_3_2_add_proxy_provider_to_jobs.py  e7b433459627_create_job_runs.py  (+4 more)
api/scripts/: cleanup_old_runs.py
api/tests/: conftest.py  test_admin.py  test_advisory.py  test_api_keys.py  test_auth.py  test_db.py  test_health.py  test_jobs.py  test_llm_keys.py  test_middleware.py  test_minio.py  test_nats.py  test_rate_limit.py  test_redis.py  test_scheduler.py  test_settings.py  test_webhook_delivery.py
llm-worker/: Dockerfile  pyproject.toml
llm-worker/tests/: conftest.py  test_llm.py  test_models.py  test_storage.py  test_worker.py
llm-worker/worker/: config.py  llm.py  main.py  models.py  storage.py  worker.py
playwright-worker/: Dockerfile  pyproject.toml
playwright-worker/tests/: conftest.py  test_formatter.py  test_main.py  test_models.py  test_storage.py
playwright-worker/worker/: config.py  formatter.py  main.py  models.py  storage.py
(+74 files in other folders)
