[project]
name = "scrapeflow-api"
version = "0.1.0"
description = "ScrapeFlow API - multi-tenant web scraping platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "redis>=5.0.0",
    "nats-py>=2.7.0",
    "miniopy-async>=1.21.0",
    "httpx>=0.27.0",
    "clerk-backend-api>=5.0.0",
    "python-multipart>=0.0.9",
    "structlog>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes (undefined names, unused imports)
    "I",   # isort
    "UP",  # pyupgrade — modernize syntax (e.g. Optional[X] → X | None)
    "B",   # flake8-bugbear — catches real bugs (mutable defaults, etc.)
    "C4",  # flake8-comprehensions — unnecessary list/dict/set calls
    "RUF", # Ruff-specific rules
]
ignore = [
    "E501",  # line length handled by formatter
    "B008",  # FastAPI uses Depends() in argument defaults by design
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
