[project]
name = "llm-worker"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "nats-py>=2.7.0",
    "miniopy-async>=1.21.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.3.0",
    "cryptography>=42.0.0",
    "anthropic>=0.30.0",
    "openai>=1.30.0",
    "structlog>=24.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
