[project]
name = "playwright-worker"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "playwright==1.44.0",
    "nats-py>=2.7.0",
    "miniopy-async>=1.21.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.3.0",
    "markdownify>=0.12.0",
    "beautifulsoup4>=4.12.0",
    "structlog>=24.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
